--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,9 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
-
-body{
-    margin: 0px;
+*{
+    margin:  0px;
+    padding: 0px;
+}
+html, body{
+    min-height: 100vh;    
 }
 header > h1{
     background-color: black;
@@ -13,6 +16,7 @@ header > h1{
     font-weight: 700;
     font-style: normal;
     font-size: 10em;
+    font-variant: small-caps;
     text-align: center;
     margin: 0px;
     padding: 50px 0px 10px 0px;
@@ -45,26 +49,29 @@ header> p >a:hover{
     text-decoration: underline; 
 }
 
+section{
+padding-top: 10vh;
+padding-bottom: 10vh;
+padding-left: 30px;
+}
+
 .branca{
     color: black;
     font-family: "Sriracha", cursive;
     font-weight: 400;
     font-style: normal;
     font-size: 4em;
-    margin: 0px;
-    padding:10px 0px 90px 30px ;
+    
 }
 #girasol {
     background-image: url(../imagens/background001.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    margin: 0px;
-    padding:10px 0px 90px 30px ;
+    
 }
 .imagem > p{
     background-color:rgba(0, 0, 0, 0.555);
     display: inline-block;
-    padding: 20px 20px 20px 2px;
     border-radius: 15px;
     color: white;
     font-family: "Sriracha", cursive;
@@ -77,7 +84,6 @@ header> p >a:hover{
     background-attachment: fixed;
     background-repeat: no-repeat;
     margin: 0px;
-    padding:10px 0px 90px 30px ;
 }
 footer > p{
     background-color: black;
