--- a/estilo/style.css
+++ b/estilo/style.css
@@ -5,6 +5,7 @@
 *{
     margin:  0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body{
     min-height: 100vh;    
@@ -15,7 +16,7 @@ header > h1{
     font-family: "Passion One", sans-serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 10em;
+    font-size: 10vw;
     font-variant: small-caps;
     text-align: center;
     margin: 0px;
@@ -53,6 +54,7 @@ section{
 padding-top: 10vh;
 padding-bottom: 10vh;
 padding-left: 30px;
+font-size: 3vw;
 }
 
 .branca{
@@ -60,7 +62,7 @@ padding-left: 30px;
     font-family: "Sriracha", cursive;
     font-weight: 400;
     font-style: normal;
-    font-size: 4em;
+    
     
 }
 #girasol {
@@ -77,7 +79,7 @@ padding-left: 30px;
     font-family: "Sriracha", cursive;
     font-weight: 400;
     font-style: normal;
-    font-size: 4em;
+    
 }
 #livro{
     background-image: url(../imagens/background002.jpg);
@@ -90,7 +92,7 @@ footer > p{
     color: white;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    
     padding: 10px;
     margin: 0px;
 }
